--- a/crud-angular/src/styles.scss
+++ b/crud-angular/src/styles.scss
@@ -1,4 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 
+@use '@angular/material' as mat;
+@include mat.core();
+
+$custom-app-primary: mat.define-palette(mat.$blue-gray-palette, 800);
+$custom-app-accent: mat.define-palette(mat.$indigo-palette, 900,);
+$custom-app-warn: mat.define-palette(mat.$red-palette);
+
+$custom-theme: mat.define-dark-theme((
+  color: (
+    primary: $custom-app-primary,
+    accent: $custom-app-accent,
+    warn: $custom-app-warn
+  ),
+  typography: mat.define-typography-config(),
+  density: 0
+));
+
+@include mat.all-component-themes($custom-theme);
+
+//caso queira aplicar o tema só em alguns componenetes, abaixo...
+//@include mat.button-theme($my-theme);
+//@include mat.toolbar-theme($my-theme);
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
