--- a/crud-angular/src/styles.scss
+++ b/crud-angular/src/styles.scss
@@ -3,8 +3,8 @@
 @use '@angular/material' as mat;
 @include mat.core();
 
-$custom-app-primary: mat.define-palette(mat.$blue-gray-palette, 800);
-$custom-app-accent: mat.define-palette(mat.$indigo-palette, 900,);
+$custom-app-primary: mat.define-palette(mat.$gray-palette, 900);
+$custom-app-accent: mat.define-palette(mat.$indigo-palette, 900);
 $custom-app-warn: mat.define-palette(mat.$red-palette);
 
 $custom-theme: mat.define-dark-theme((
