--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,7 +1,10 @@
 <mat-card>
   <mat-card-content>
     <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
-    <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+    <div *ngIf="courses$ | async as courses; else loading">
+
+
+    <table mat-table [dataSource]="courses" class="mat-elevation-z8" >
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Nome </th>
@@ -17,5 +20,13 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
+  </div>
+
+    <ng-template #loading>
+      <div class="loading-spinner">
+        <mat-spinner/>
+      </div>
+    </ng-template>
+
   </mat-card-content>
 </mat-card>
