--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -1,3 +1,11 @@
 mat-card {
   border-radius: 0;
 }
+
+.loading-spinner{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.15);
+  padding: 25px;
+}
