--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,30 +1,32 @@
 <mat-card>
   <mat-card-content>
     <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
+
     <div *ngIf="courses$ | async as courses; else loading">
+      <table mat-table [dataSource]="courses" class="mat-elevation-z8">
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef> Nome </th>
+          <td mat-cell *matCellDef="let course"> {{course.name}} </td>
+        </ng-container>
 
+        <!-- Category Column -->
+        <ng-container matColumnDef="category">
+          <th mat-header-cell *matHeaderCellDef> Category </th>
+          <td mat-cell *matCellDef="let course">
+            {{course.category}}
+            <mat-icon aria-hidden="false">{{course.category | category}}</mat-icon>
+          </td>
+        </ng-container>
 
-    <table mat-table [dataSource]="courses" class="mat-elevation-z8" >
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Nome </th>
-        <td mat-cell *matCellDef="let course"> {{course.name}} </td>
-      </ng-container>
-
-      <!-- Category Column -->
-      <ng-container matColumnDef="category">
-        <th mat-header-cell *matHeaderCellDef> Category </th>
-        <td mat-cell *matCellDef="let course"> {{course.category}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  </div>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+    </div>
 
     <ng-template #loading>
       <div class="loading-spinner">
-        <mat-spinner/>
+        <mat-spinner />
       </div>
     </ng-template>
 
