Feat: Adicionando botões de ação dos cursos e redirecionamento para adicionar novo curso

--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -19,6 +19,20 @@
           </td>
         </ng-container>
 
+        <!-- Actions Column -->
+        <ng-container matColumnDef="actions">
+          <mat-header-cell *matHeaderCellDef>
+            <button (click)="onAdd()" class="material-icons" mat-mini-fab color="accent" aria-label="Adicionar curso">add</button>
+          </mat-header-cell>
+
+          <mat-cell *matCellDef="let course">
+            <button class="material-icons" mat-icon-button color="primary" aria-label="Editar curso">edit</button>
+
+            <button class="material-icons" mat-icon-button color="warn" aria-label="Remover curso">delete</button>
+          </mat-cell>
+
+        </ng-container>
+
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
       </table>
