--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -11,8 +11,12 @@
       </mat-form-field>
 
       <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Categoria do curso</mat-label>
-        <input matInput placeholder="Categoria" formControlName="category">
+        <mat-label>Categoria</mat-label>
+        <mat-select formControlName="category">
+          <mat-option value="option1"></mat-option>
+          <mat-option value="frontend">Frontend</mat-option>
+          <mat-option value="backend">Backend</mat-option>
+        </mat-select>
       </mat-form-field>
 
     </form>
