Feat: Fazendo navegação do criar curso ou cancelar ação, e exibindo snackbar de sucesso

--- a/crud-angular/src/app/courses/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/course-form/course-form.component.html
@@ -13,7 +13,7 @@
       <mat-form-field appearance="fill" class="full-width">
         <mat-label>Categoria</mat-label>
         <mat-select formControlName="category">
-          <mat-option value="option1"></mat-option>
+          <mat-option value=""></mat-option>
           <mat-option value="frontend">Frontend</mat-option>
           <mat-option value="backend">Backend</mat-option>
         </mat-select>
