--- a/crud-angular/src/app/courses/courses/courses.component.html
+++ b/crud-angular/src/app/courses/courses/courses.component.html
@@ -1,48 +1,14 @@
-<mat-card>
+<mat-card class="column-flex">
   <mat-card-content>
     <mat-toolbar color="primary">Cursos disponíveis</mat-toolbar>
 
-    <div *ngIf="courses$ | async as courses; else loading">
-      <table mat-table [dataSource]="courses" class="mat-elevation-z8">
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef> Nome </th>
-          <td mat-cell *matCellDef="let course"> {{course.name}} </td>
-        </ng-container>
+      <app-courses-list *ngIf="courses$ | async as courses; else loading" [courses]="courses"/>
 
-        <!-- Category Column -->
-        <ng-container matColumnDef="category">
-          <th mat-header-cell *matHeaderCellDef> Category </th>
-          <td mat-cell *matCellDef="let course">
-            {{course.category}}
-            <mat-icon aria-hidden="false">{{course.category | category}}</mat-icon>
-          </td>
-        </ng-container>
-
-        <!-- Actions Column -->
-        <ng-container matColumnDef="actions">
-          <mat-header-cell *matHeaderCellDef>
-            <button (click)="onAdd()" class="material-icons" mat-mini-fab color="accent" aria-label="Adicionar curso">add</button>
-          </mat-header-cell>
-
-          <mat-cell *matCellDef="let course">
-            <button class="material-icons" mat-icon-button color="primary" aria-label="Editar curso">edit</button>
-
-            <button class="material-icons" mat-icon-button color="warn" aria-label="Remover curso">delete</button>
-          </mat-cell>
-
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>
-
-    <ng-template #loading>
-      <div class="loading-spinner">
-        <mat-spinner />
-      </div>
-    </ng-template>
+      <ng-template #loading>
+        <div class="loading-spinner">
+          <mat-spinner />
+        </div>
+      </ng-template>
 
   </mat-card-content>
 </mat-card>
