--- a/crud-angular/src/app/courses/courses/courses.component.scss
+++ b/crud-angular/src/app/courses/courses/courses.component.scss
@@ -1,5 +1,14 @@
 mat-card {
   border-radius: 0;
+  max-width: 80%;
+  margin: 2rem auto;
+  text-align: center;
+}
+
+.column-flex {
+  display: flex;
+  flex-direction: column;
+  min-width: 300px;
 }
 
 .loading-spinner{
