Feat: Criando Resolver para recuperar dados de curso antes de navegar para a rota. Refactor: Refatorando método Save de cursos para usá-lo para criar e atualizar curso

--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -21,7 +21,7 @@
     </mat-header-cell>
 
     <mat-cell *matCellDef="let course" class="actions-column">
-      <button class="material-icons" mat-icon-button color="primary" aria-label="Editar curso">edit</button>
+      <button (click)="onEdit(course)" class="material-icons" mat-icon-button color="primary" aria-label="Editar curso">edit</button>
 
       <button class="material-icons" mat-icon-button color="warn" aria-label="Remover curso">delete</button>
     </mat-cell>
