Feat: Implementando funcionalidade no botão de remover curso

--- a/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
+++ b/crud-angular/src/app/courses/components/courses-list/courses-list.component.html
@@ -23,7 +23,7 @@
     <mat-cell *matCellDef="let course" class="actions-column">
       <button (click)="onEdit(course)" class="material-icons" mat-icon-button color="primary" aria-label="Editar curso">edit</button>
 
-      <button class="material-icons" mat-icon-button color="warn" aria-label="Remover curso">delete</button>
+      <button (click)="onDelete(course)" class="material-icons" mat-icon-button color="warn" aria-label="Remover curso">delete</button>
     </mat-cell>
 
   </ng-container>
