--- a/crud-angular/src/app/courses/containers/course-form/course-form.component.html
+++ b/crud-angular/src/app/courses/containers/course-form/course-form.component.html
@@ -22,6 +22,29 @@
         <mat-error *ngIf="form.get('category')?.invalid">{{getErrorMessage("category")}}</mat-error>
       </mat-form-field>
 
+      <mat-toolbar>
+        <span>Aulas</span>
+        <button mat-icon-button class="material-icons" color="accent" aria-label="Adicionar uma nova aula">add</button>
+      </mat-toolbar>
+
+      <table style="width: 100%;" formArrayName="lessons" *ngFor="let lesson of getLessonsFormArray(); let i = index">
+        <tr [formGroupName]="i">
+          <td style="width: 65%;">
+            <mat-form-field appearance="fill" class="full-width">
+              <mat-label>Nome da aula</mat-label>
+              <input matInput placeholder="Nome" formControlName="name">
+            </mat-form-field>
+          </td>
+          <td style="width: 30%;">
+            <mat-form-field appearance="fill" class="full-width">
+              <mat-label>URL</mat-label>
+              <span matPrefix>https://youtu.be/</span>
+              <input matInput placeholder="URL" formControlName="youtubeUrl">
+            </mat-form-field>
+          </td>
+        </tr>
+      </table>
+
     </form>
   </mat-card-content>
 
